# solana-did-method

./: .gitignore  Cargo.toml  EncodedConfirmedTransaction.md  Notes.md  README.md
cli/: Cargo.toml
cli/keys/prog/: SDM_pk.json
cli/keys/wallet/: test_wallet.json
cli/src/: chain_trait.rs  clparse.rs  errors.rs  incp_event.rs  lib.rs  main.rs  pasta_keys.rs  utils.rs
cli/src/pkey_wrap/: mod.rs
cli/src/skey_wrap/: mod.rs
cli/src/solana_wrap/: mod.rs  schain_wrap.rs  skey_wrap.rs
cli/src/wallet/: chain_event.rs  generic_keys.rs  mod.rs  wallet_enums.rs
cli/tests/: integration.rs  paste_key_test.rs
program/: Cargo.toml
program/src/: entry_point.rs  error.rs  instruction.rs  lib.rs  process.rs  state.rs
soldid/: Cargo.toml
soldid/src/: chain_trait.rs  clparse.rs  errors.rs  lib.rs  main.rs
soldid/src/pkey_wrap/: mod.rs
soldid/src/solana_wrap/: mod.rs  schain_wrap.rs
soldid/src/wallet/: chain_event.rs  generic_keys.rs  mod.rs  wallet_enums.rs
soldid/tests/: integration.rs
