[package]
name = "cli"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.0"
borsh  = "0.9.3"
bs58 = "0.4.0"
# num-derive = "0.3"
# num-traits = "0.2"
ed25519-dalek = "1.0.1"
#keri = "0.8.1"
keri = {path="../../keriox"}
pasta_curves = "0.3.1"
rand = "0.8.5"
serde_json = "1.0.79"
solana-client = "1.10.8"
solana-did-method = {path="../program",version="0.2.0"}
solana-sdk = "1.10.8"
solana-transaction-status = "1.10.8"
thiserror = "1.0"

[dev-dependencies]
solana-sdk = "1.10.8"
solana-logger = "1.10.8"
solana-rpc = "1.10.8"
solana-test-validator =  "1.10.8"
tempfile = "3.1"
