[package]
name = "cli"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.0"
borsh  = "0.9.3"
bs58 = "0.4.0"
ed25519-dalek ="1.0.1"
hbpasta-rs ="0.1.0"
hbkr-rs ="0.1.0"
serde_json = "1.0.81"
solana-client = "1.10.23"
solana-did-method = {path="../program",version="0.2.0"}
solana-sdk = "1.10.23"
solana-transaction-status = "1.10.23"
thiserror = "1.0"

[dev-dependencies]
solana-sdk = "1.10.23"
solana-logger = "1.10.23"
solana-rpc = "1.10.23"
solana-test-validator =  "1.10.23"
tempfile = "3.1"
