[package]
name = "solana-did-method"
edition = "2021"
version = "0.2.0"

[dependencies]
borsh = "0.9.3"
num_enum = "0.5.6"
solana-program = "1.10.8"
thiserror = "1.0"

[dev-dependencies]
assert_matches = "1.5.0"
solana-program-test = "1.10.8"
solana-sdk = "1.10.8"

[features]
test-bpf = []

[lib]
plugin = false
proc-macro = false
crate-type = ["cdylib", "lib"]
required-features = []
