[package]
name = "soldid"
version = "0.6.1"
edition = "2021"
description = "solana-did-method file system wallet CLI"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.0"
borsh  = {version="0.9.3", feature="borsh_skip"}
bs58 = "0.4.0"
clap = { version = "3", features = ["cargo"] }
ed25519-dalek ="1.0.1"
hbpasta-rs ="0.1.0"

# Hashblock key management
# invert comments when testing locally
hbkr-rs ="0.3.2"
# hbkr-rs ={version="0.3.2", path="../../hbkr-rs"}
# end hbkr
semver = "1.0.12"
serde_json = "1.0.81"
solana-client = "~1.10"
solana-cli-config = "~1.10"
solana-did-method = {path="../program",version="0.4.0"}
solana-sdk = "~1.10"
solana-transaction-status = "~1.10"
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]

solana-sdk = "~1.10"
solana-logger = "~1.10"
solana-rpc = "~1.10"
solana-test-validator =  "~1.10"
